[package]
name = "rusty-simanneal"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
num-traits = "0.2"
log = "0.4"

[dev-dependencies]
csv = "1.3.0"
serde = { version = "1.0.203", features = ["default", "derive"] }
itertools = "0.13.0"
rand = { version = "0.8.5", features = ["std", "small_rng"] }